# Loader_3D

./: .gitignore  CMakeLists.txt  README.md
Block/: CMakeLists.txt
Block/Cube/: CMakeLists.txt  Cube.cpp
Block/Globular/: CMakeLists.txt  Globular.cpp  Globular.hpp
Block/Pyramid/: CMakeLists.txt  Pyramid.cpp  Pyramid.hpp
Common/: CMakeLists.txt
Common/include/: Application.hpp  Controller.hpp  CoordinateSystem.hpp  Renderer.hpp
Common/src/: Application.cpp  Controller.cpp  CoordinateSystem.cpp  Renderer.cpp
Scripts/: git_clone.py
Src/: CMakeLists.txt
Utils/: CMakeLists.txt
include/: Application.hpp  CMakeLists.txt  Controller.hpp  Cube.hpp  Pyramid.hpp  Renderer.hpp  Shape.hpp  Vertex.hpp
src/: Application.cpp  CMakeLists.txt  Controller.cpp  Cube.cpp  Pyramid.cpp  Renderer.cpp
